gccida/c2/sched_analyze_2
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/sched_analyze_2/src/sched-deps.c:1169:24: error: unknown type name 'deps_0'
void  sched_analyze_2( deps_0 *deps, rtx x, rtx insn) 
                       ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/sched_analyze_2/src/sched-deps.c:1173:4: error: expected ';' after expression
rtx v7; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/sched_analyze_2/src/sched-deps.c:1173:5: error: use of undeclared identifier 'v7'
rtx v7; // r12 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/sched_analyze_2/src/sched-deps.c:1174:4: error: expected ';' after expression
rtx pending_read_insns; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/sched_analyze_2/src/sched-deps.c:1174:5: error: use of undeclared identifier 'pending_read_insns'
rtx pending_read_insns; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/sched_analyze_2/src/sched-deps.c:1175:6: error: use of undeclared identifier 'v9'
rtx *v9; // rbx 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/sched_analyze_2/src/sched-deps.c:1176:4: error: expected ';' after expression
rtx v10; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/sched_analyze_2/src/sched-deps.c:1176:5: error: use of undeclared identifier 'v10'
rtx v10; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/sched_analyze_2/src/sched-deps.c:1177:4: error: expected ';' after expression
rtx pending_write_insns; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/sched_analyze_2/src/sched-deps.c:1177:5: error: use of undeclared identifier 'pending_write_insns'
rtx pending_write_insns; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/sched_analyze_2/src/sched-deps.c:1178:6: error: use of undeclared identifier 'v12'
rtx *v12; // rbx 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/sched_analyze_2/src/sched-deps.c:1179:4: error: expected ';' after expression
rtx v13; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/sched_analyze_2/src/sched-deps.c:1179:5: error: use of undeclared identifier 'v13'
rtx v13; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/sched_analyze_2/src/sched-deps.c:1180:4: error: expected ';' after expression
rtx i; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/sched_analyze_2/src/sched-deps.c:1180:5: error: use of undeclared identifier 'i'
rtx i; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/sched_analyze_2/src/sched-deps.c:1184:4: error: expected ';' after expression
rtx v18; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/sched_analyze_2/src/sched-deps.c:1184:5: error: use of undeclared identifier 'v18'
rtx v18; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/sched_analyze_2/src/sched-deps.c:1185:4: error: expected ';' after expression
rtx v19; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/sched_analyze_2/src/sched-deps.c:1185:5: error: use of undeclared identifier 'v19'
rtx v19; // rbx 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/sched_analyze_2/src/obj/sched-deps.o] Error 1
